--- a/konwerter/JIPP5-LAB/JIPP5-LAB.csproj
+++ b/konwerter/JIPP5-LAB/JIPP5-LAB.csproj
@@ -100,17 +100,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="bazydanych\Azure.cs" />
-    <Compile Include="bazydanych\BazaDanych.cs" />
-    <Compile Include="bazydanych\IPobieranieDanych.cs" />
-    <Compile Include="bazydanych\StatisticDTO.cs" />
-    <Compile Include="bazydanych\StatisticsEntity.cs" />
-    <Compile Include="bazydanych\StatisticModel.cs" />
-    <Compile Include="bazydanych\StatisticsContext.cs" />
-    <Compile Include="ConvertersService.cs" />
-    <Compile Include="konwertery\TemperatureConverter.cs" />
-    <Compile Include="konwertery\LengthConverter.cs" />
-    <Compile Include="konwertery\WeightConverter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -147,6 +136,10 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\JIPP5.Logic\JIPP5.Logic.csproj">
+      <Project>{0d3eeab4-cd0f-4f8a-bd88-2a7a93fa4f18}</Project>
+      <Name>JIPP5.Logic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\JIPP5.SDK\JIPP5.SDK.csproj">
       <Project>{91e4217c-6969-4e24-b52e-505d380049c8}</Project>
       <Name>JIPP5.SDK</Name>
