--- a/UnitConverter/UnitConverter/packages.config
+++ b/UnitConverter/UnitConverter/packages.config
@@ -2,7 +2,11 @@
 <packages>
   <package id="Autofac" version="4.9.4" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net472" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net472" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net472" />
   <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net472" />
 </packages>
