--- a/KonwertnbpPlugin/KonwertnbpPlugin/KonwertnbpPlugin.csproj
+++ b/KonwertnbpPlugin/KonwertnbpPlugin/KonwertnbpPlugin.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{16E16C24-00BF-4AD5-8461-C41B7C2C4908}</ProjectGuid>
+    <ProjectGuid>{FD921351-C402-45F4-80DC-288CA20CFC26}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KonwerterPlugin</RootNamespace>
-    <AssemblyName>KonwerterPlugin</AssemblyName>
+    <RootNamespace>KonwertnbpPlugin</RootNamespace>
+    <AssemblyName>KonwertnbpPlugin</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -34,6 +34,10 @@
     <Reference Include="Konwerter.SDK, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\SEM5WPF_1\Konwerter.SDK\bin\Debug\Konwerter.SDK.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\SEM5WPF_1\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
