--- a/UnitsConverter/UnitsConverter.csproj
+++ b/UnitsConverter/UnitsConverter.csproj
@@ -107,6 +107,7 @@
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
